- Fix the double border in custom select.

--- a/RockWeb/Styles/rock-components/custom-select.less
+++ b/RockWeb/Styles/rock-components/custom-select.less
@@ -34,13 +34,12 @@
 .custom-select-mobile-wrapper,
 .custom-select-wrapper {
   position: relative;
-  border: 1px solid var(--color-interface-soft);
   border-radius: var(--rounded-small);
   overflow: clip;
 }
 
-.custom-select-mobile-wrapper.is-closed {
-  border: 0;
+.custom-select-wrapper {
+  border: 1px solid var(--color-interface-soft);
 }
 
 .custom-select-mobile-wrapper .custom-select-item {
